correct json format

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,2 +1,90 @@
-# Ehm ja ein Jupyter-Notebook
-Bin ja mal gespannt, ob das tut.
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "91f162be",
+   "metadata": {},
+   "source": [
+    "# Mein erstes Jupyter-Notebook\n",
+    "Ehm ja, keine Ahnung, was ich da schreiben soll.\n",
+    "Eine Liste?\n",
+    "* Hallo\n",
+    "* Velo\n",
+    "- Test\n",
+    "- Test\n",
+    "Eh ja, scheint zu gehen.\n",
+    "## Oder so\n",
+    "Hallo **Velo**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "005d097b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception reporting mode: Plain\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[1;36m  Input \u001b[1;32mIn [7]\u001b[1;36m in \u001b[1;35m<cell line: 4>\u001b[1;36m\u001b[0m\n\u001b[1;33m    c = a/b\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m\u001b[1;31m:\u001b[0m division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "%xmode Plain\n",
+    "a = 5\n",
+    "b = 0\n",
+    "c = a/b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9148378c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Champagner', 'Baileys', 'Cognac', 'Kirsch']\n"
+     ]
+    }
+   ],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
